fixed gaps between menu items and subscription input fields

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -642,7 +642,6 @@ h3{
 .menu-popular__grid-container{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 15px;
     margin-bottom: 30px;
     width: 100%;
 }
@@ -659,6 +658,7 @@ h3{
     // flex:  1 1 calc(100% / 4);
     display: flex;
     flex-direction: column;
+    margin: 8px;
     
 
 
@@ -764,7 +764,6 @@ h3{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 35px;
     margin-bottom: 30px;
 }
 
@@ -772,6 +771,7 @@ h3{
     color: $color-text;
     position: relative;
     width: 100%;
+    margin-bottom: 35px;
 
     & label{
         position: absolute;
